--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 jwt.secret=Ngong
 server.port=${PORT:8080}
 logging.level.root=INFO
+
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_wordpress
+spring.datasource.username=root
+spring.datasource.password=root
