--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=${PORT:8080}
 logging.level.root=INFO
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_wordpress
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
+spring.datasource.username=sql6527552
+spring.datasource.password=QualqXBQ7G
