--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=${PORT:8080}
 logging.level.root=INFO
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_wordpress
+spring.datasource.url=jdbc:mysql://localhost:3306/ngong_web
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
