--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,18 @@ server.port=${PORT:8080}
 logging.level.root=INFO
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
-spring.datasource.username=sql6527552
-spring.datasource.password=QualqXBQ7G
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_wordpress
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+kiotviet.token.url=https://id.kiotviet.vn/connect/token
+kiotviet.token.scopes=PublicApi.Access
+kiotviet.token.grant-type=client_credentials
+kiotviet.token.client-id=b0c70023-7e2d-452b-a06a-dd9820931964
+kiotviet.token.client-secret=41F4E5A10F57D466F6614A4A584F83D1FC6B533B
+kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
+kiotviet.retailer=rausachviet1808
