--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port=${PORT:8080}
 logging.level.root=INFO
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_wordpress
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
+spring.datasource.username=sql6527552
+spring.datasource.password=QualqXBQ7G
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
