--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 jwt.secret=Ngong
-server.port=${PORT:8080}
+server.port=8080
 logging.level.root=INFO
 
 ## MySQL
 spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
 spring.datasource.username=sql6527552
 spring.datasource.password=QualqXBQ7G
+
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=900000
+#spring.datasource.hikari.leak-detection-threshold=5000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.keepalive-time=30000
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
