--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 jwt.secret=Ngong
 server.port=8080
-logging.level.root=INFO
+logging.level.root=
+
+## JWT Token
+jwt-token-validity-time=18000
 
 ## MySQL
 spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
 spring.datasource.username=sql6527552
 spring.datasource.password=QualqXBQ7G
 
+## Hikari
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=900000
 #spring.datasource.hikari.leak-detection-threshold=5000
