--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.keepalive-time=30000
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
