--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ logging.level.root=
 jwt-token-validity-time=18000
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6527552
-spring.datasource.username=sql6527552
-spring.datasource.password=QualqXBQ7G
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6529182
+spring.datasource.username=sql6529182
+spring.datasource.password=wgmGyHTTCb
 
 ## Hikari
 spring.datasource.hikari.idle-timeout=30000
