--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ logging.level.root=
 jwt-token-validity-time=18000
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6529182
-spring.datasource.username=sql6529182
-spring.datasource.password=wgmGyHTTCb
+spring.datasource.url=jdbc:mysql://103.221.220.15:3306/dongcuon_ngong
+spring.datasource.username=dongcuon_ngong
+spring.datasource.password=^Pljwo0w3p)5
 
 ## Hikari
 spring.datasource.hikari.idle-timeout=30000
