--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
 kiotviet.token.grant-type=client_credentials
-kiotviet.token.client-id=b0c70023-7e2d-452b-a06a-dd9820931964
-kiotviet.token.client-secret=41F4E5A10F57D466F6614A4A584F83D1FC6B533B
+kiotviet.token.client-id=c93f17c6-3846-4281-90b8-97fdde0a35a2
+kiotviet.token.client-secret=6F50D9FFB6BC2E7D151B7AFF9F672B7CDDAAD53D
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
-kiotviet.retailer=rausachviet1808
+kiotviet.retailer=rauviet1808
