Add project, trip & ctv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ kiotviet.token.client-id=c93f17c6-3846-4281-90b8-97fdde0a35a2
 kiotviet.token.client-secret=6F50D9FFB6BC2E7D151B7AFF9F672B7CDDAAD53D
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
 kiotviet.retailer=rauviet1808
+
+#spring.jpa.hibernate.ddl-auto=update
