Up kiot viet config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
 kiotviet.token.grant-type=client_credentials
-kiotviet.token.client-id=c93f17c6-3846-4281-90b8-97fdde0a35a2
-kiotviet.token.client-secret=6F50D9FFB6BC2E7D151B7AFF9F672B7CDDAAD53D
+kiotviet.token.client-id=1f51a8d7-5bb4-4d0d-a3d7-e8cded0b24be
+kiotviet.token.client-secret=4D0442A4E230ADF57B592EC53CDA81A3D136B79B
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
-kiotviet.retailer=rauviet1808
+kiotviet.retailer=demoapiweb
 
 #spring.jpa.hibernate.ddl-auto=update
