--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jwt.secret=Ngong
 server.port=8080
-logging.level.root=
+#logging.level.root=
 
 ## JWT Token
 jwt-token-validity-time=18000
@@ -27,9 +27,9 @@ spring.datasource.hikari.keepalive-time=30000
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
 kiotviet.token.grant-type=client_credentials
-kiotviet.token.client-id=1f51a8d7-5bb4-4d0d-a3d7-e8cded0b24be
-kiotviet.token.client-secret=4D0442A4E230ADF57B592EC53CDA81A3D136B79B
+kiotviet.token.client-id=862bf695-ec6d-4cd8-b52a-6f4b1d3f2658
+kiotviet.token.client-secret=46C1CA94B0A8ED4F9733516D95C7C3CABFE1D9F1
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
-kiotviet.retailer=demoapiweb
+kiotviet.retailer=testketnoiapi
 
 #spring.jpa.hibernate.ddl-auto=update
