--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.keepalive-time=30000
 
-#Debug for JPA
+#Debug for JPAkiotviet.retailer
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type.descriptor.sql=trace
