--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,8 @@ kiotviet.token.client-id=862bf695-ec6d-4cd8-b52a-6f4b1d3f2658
 kiotviet.token.client-secret=46C1CA94B0A8ED4F9733516D95C7C3CABFE1D9F1
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
 kiotviet.retailer=testketnoiapi
-
+kiotviet.branch.id=1289911
+kiotviet.sold.id=1417533
+kiotviet.cashier.id=1417533
+kiotviet.cus.group.id=1230415
 #spring.jpa.hibernate.ddl-auto=update
