--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,12 +27,12 @@ spring.datasource.hikari.keepalive-time=30000
 kiotviet.token.url=https://id.kiotviet.vn/connect/token
 kiotviet.token.scopes=PublicApi.Access
 kiotviet.token.grant-type=client_credentials
-kiotviet.token.client-id=862bf695-ec6d-4cd8-b52a-6f4b1d3f2658
-kiotviet.token.client-secret=46C1CA94B0A8ED4F9733516D95C7C3CABFE1D9F1
+kiotviet.token.client-id=78cb5a12-305a-4455-b05d-d0abb3233fc0
+kiotviet.token.client-secret=999A84513963AB42ED1BC88675FBB3010BB5C2DA
 kiotviet.token.detail-product.url=https://public.kiotapi.com/products/code
-kiotviet.retailer=testketnoiapi
-kiotviet.branch.id=1289911
-kiotviet.sold.id=1417533
-kiotviet.cashier.id=1417533
-kiotviet.cus.group.id=1230415
+kiotviet.retailer=testapiketnoi
+kiotviet.branch.id=1299126
+kiotviet.sold.id=1435479
+kiotviet.cashier.id=1435479
+kiotviet.cus.group.id=1230834
 #spring.jpa.hibernate.ddl-auto=update
